src/app/containers/Preferences/index.styl
/*
 * Copyright (C) 2021 Sienci Labs Inc.
 *
 * This file is part of gSender.
 *
 * gSender is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, under version 3 of the License.
 *
 * gSender is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with gSender.  If not, see <https://www.gnu.org/licenses/>.
 *
 * Contact for information regarding this program and its license
 * can be sent through gSender@sienci.com or mailed to the main office
 * of Sienci Labs Inc. in Waterloo, Ontario, Canada.
 *
 */

.preferencesContainer {
  width: 1000px;
  height: 700px;
  display: flex;
  flex-grow: 1;
  border: solid 1px #aab0ba;
  label {
    margin: 0;
    font-size: 1.1rem;
  }
}

.preferencesContent {
  display: flex;
  flex-direction: row;
  overflow-y: hidden;
  flex-grow: 1;
}

.reconnect {
  margin-bottom: 10px;
}

.preferencesMenu {
  width: 20%;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  background: #1F2937;
  font-size: 1.2rem;

  h3 {
    color: #3e85c7;
    font-size: 1.8rem;
    padding-left: 10px;
  }

  button {
    font-size: 1rem;
    border: none;
    width: 100%;
    margin: 0;
    background: none;
    color: white;
    text-align: left;
    padding: 20px 0 20px 10px;

    &:focus {
      outline: none;
    }

    &:hover {
      background: #374151;
    }
  }
}

.activeMenu {
  background: #374151 !important;
}

.general-area {
  width: 100%;
  height: 625px;
  display: flex;
  gap: 2rem;
  justify-content: space-between;
}

.preferencesOptions {
  width: 80%;
  background: #d1d5db;
  div:last-child {
    height: 94%;
    }
}

.hidden {
  display: none;
}

.visible {
  display: block;
}

.tool-main {
  display: flex;
  flex-direction: col;
  justify-content: space-between;
  width: 100%;
}

.tool-wrapper {
  height: calc(100% - 20px);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 1rem;
}

.tool-listings {
  display: flex;
  flex-direction: column;
  width: 40%;
}

.add-tool-form {
  display: flex;
  flex-direction: column;
  width: 50%;
}

.tools {
  width: 100%;
  border-radius: 2px;
  background: white;
  overflow-y: scroll;
  height: 400px;

  .delete {
    font-size: 1rem;
    color: red;
    justify-content: center;
    align-items: center;
    border: none;
    outline: none;
    background: none;
  }
}

.tool {
  padding: 10px;
  display: flex;
  flex-direction: row;
  font-size: 1.15rem;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.tool-dimensions {
  width: 30%;
}

.tool + .tool {
  border-top: solid 1px #cccccc;
}

.add-tool {
  width: 100%;
  background: #3e85c7;
  color: #FFFFFF;
  outline: none;
  border: none;
  padding: .5rem;
  border-radius: .25rem;
  margin: 1rem 0;

  &:disabled {
    background: #6B7280;
  }
}

.save-colour {
  width: 100%;
  background: #3e85c7;
  color: #FFFFFF;
  outline: none;
  border: none;
  padding: .5rem;
  border-radius: .25rem;
  margin: 1rem 0;
}

.choose-colour {
  width: 221px;
  background: #3e85c7;
  color: #FFFFFF;
  outline: none;
  border: none;
  padding: .5rem;
  border-radius: .25rem;
  margin: .5rem 0 0;
}

.reset-colour {
  width: 221px;
  background: #df3b3b;
  color: #FFFFFF;
  outline: none;
  border: none;
  padding: .5rem;
  border-radius: .25rem;
  margin: .5rem 0 0;
}

.color-picker {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
}

.jog-speed-active {
  font-size: 1rem;
  width: 100%;
  background: #3e85c7;
  color: #FFFFFF;
  outline: none;
  border: none;
  padding: 7px;
  border-radius: .25rem;
  margin: 0;
}

.jog-speed-inactive {
  font-size: 1rem;
  width: 100%;
  background: #6B7280;
  color: #FFFFFF;
  outline: none;
  border: none;
  padding: 7px;
  border-radius: .25rem;
  margin: 0;
}

.disabled {
  pointer-events: none;
  opacity: .3;
  margin-bottom: 10px;
}

.input-spread {
  display: grid;
  grid-template-columns: 1fr 2fr;
  margin-bottom: 10px;
  align-items: center;
  gap: 1rem;
  margin: 0 10px .9rem !important;

  label {
    font-size: 1.1rem;
  }

  &:nth-child(2) {
    align: right;
  }
}

.probe-info {
  width: 60%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.keybindings-message {
  color: white;
  background-color: #3e85c7;
  font-size: 1rem;
  padding: 1rem;
  margin-top: 1.4rem;
}

.table-wrapper {
  background-color: white;
  height: 580px;
  overflow-y: scroll;
}

.settings-title {
  font-size: 1.8rem;
  margin: 20px 0 1rem;
}

.settings-subtitle {
  color: #3e85c7;
  font-size: 1.15rem;
  margin: 10px 0;
}

.settings-wrapper {
  width: 95%;
  margin: auto;
}

.machine-options-inputgroup {
  display: flex;
  align-items: center;
  margin-bottom: 1.4rem;
  width: 100%;

  label {
    font-size: 1.1rem;
  }
}

.machine-options-section {
  margin: auto;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.machine-options-select {
  width: 100%;
  font-size: 1.2rem;
}

.mb-0 {
  margin-bottom: 0;
}

.machine-features-section {
  display: flex;
  gap: 1rem;
  justify-content: space-between;
  flex-direction: row;
}

.probe-settings-group {
  margin: 1rem 0;
}

.jog-speed-wrapper {
  display: flex;
  gap: 1rem;
  margin-bottom: 1rem;
  font-size: 1.1rem;

  button {
    max-width: 30%;
  }
}

.flex {
  display: flex;
}

.justify-content-center {
  justify-content: center;
}

.justify-content-space-between {
  justify-content: space-between;
}

.justify-content-space-around {
  justify-content: space-around;
}

.justify-content-space-evenly {
  justify-content: space-evenly;
}

.flex-row {
  flex-direction: row;
  justify-content: space-between;
}

.flex-column {
  flex-direction: column;
  width: 100%;
}

.fieldset {
  border: 2px solid rgba(0, 0, 0, .15);
  padding: 10px 10px 0;
  // margin-bottom: 1rem;

  &.form-group:last-child {
    margin-bottom: 0;
  }

  br {
    line-height: 150%;
  }
}

.fieldset-legend {
  font-size: 1.3rem;
  color: #3e85c7;
  margin: 0;
  width: unset;
  border-bottom: 0;
}

.general-area-item {
  margin-bottom: .9rem;
}

.item-info {
  font-size: .95rem;
  color: rgba(0, 0, 0, .45);
  margin-bottom: .9rem;
}

.input {
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr 2fr;
  margin: 0 10px .9rem !important;

  label {
    font-size: 1.1rem;
    align-self: center;
  }

  &.full {
    grid-template-columns: 1fr;
  }
}

.prefferedradio {
  font-size: 1.1rem;
}

.viz-grid {
  width: 100%;
  display: grid;
  grid-template-columns: 2fr 1fr 1fr;

  > * {
    margin-bottom: 20px;
  }
}

.inputText {
  font-size: 1.35rem !important;
}

.half-container {
  width: 48%;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;

  &:last-child {
    margin-bottom: 0 !important;
  }
}

.add-margin {
  margin-bottom: .9rem;
}

.padding-bottom {
  padding-bottom: 0.25rem;
  width: 100%;
}

.toggle-container {
  display flex;
  flex-direction row-reverse;
  margin-bottom: 2px;
  margin-top: -2px;
}

.input-value {
  text-align center;
  color: #3e85c7;
  background: #FFFFFF;
  font-weight: bold
  padding: 0.2rem 0;
  margin-top: 1px;
}

.disabled-message {
  color: #b82e2e;
  font-weight: bold;
}

.dots-v2 {
  background-image: linear-gradient(to right, #000 30%, rgba(255, 255, 255, 0) 30%);
  background-position: 0 14px;
  background-size: 10px 1px;
  background-repeat: repeat-x;
  width: 100%;
  height:25px;
}

.first {
  margin-right: 0.5em;
  white-space: nowrap;
}

.second {
  margin-left: 0.5em;
}

.color-button {
  padding: 9px;
  border-radius: 50%;
  border-width: 0px;
}

.label {
  font-size: 1.35rem
}

.color-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 5px;
}

.color-display {
  height: 25px;
  width: 137px;
  min-width: 137px;
  background-color: #B2B2BD
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border-radius: .25rem;
  padding-left: 3px;
  padding-right: 3px;

  margin-left: 0.5em;
}

.color-modal {
  min-width: 230px !important;
  max-width: 230px !important;
  
  min-height: 440px !important;

  line-height: 1.5 !important;
}

.stats-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 5px;
  min-width: 250px;
  white-space: nowrap;
}

.tooltip {
  max-height: 50px !important;
  height: 50px !important;
}

.charts-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  justify-content: center;
  align-items: center;
}

.charts-title {
  font-weight: bold;
  text-decoration: underline;
}

.indent-container {
  margin-left: 10px;
}

.bold {
  font-weight: bold;
}

